Pushing various minor fixes to TrailViewer pipelines

--- a/TrialViewer/pipelines/testing/test.ipynb
+++ b/TrialViewer/pipelines/testing/test.ipynb
@@ -23,6 +23,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "98178fb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['47be9ae4-290f-46ab-b047-952bc3a1a509',\n",
+       " 'decc8d40-cf74-4263-ae9d-a0cc68b47e86',\n",
+       " '08ed0b3c-9f94-4c1f-8522-3d42a642a6b0',\n",
+       " 'c410fda5-a6db-4697-a7e3-6ed65601844d',\n",
+       " 'ce0dc660-f19e-46a3-94f9-646bebae6805',\n",
+       " '7441d0df-ef9b-419b-ae4d-b9bd7c2f17cb',\n",
+       " '18be19f9-6ca5-4fc8-9220-ba43c3e75905',\n",
+       " '7c11adc6-adbd-484f-8ae9-13946285e3f8',\n",
+       " 'e4632651-5ba7-48a7-86db-5298b45a5bac',\n",
+       " '98bde8a6-6b6a-4e53-96b1-9078c3974a97',\n",
+       " '79fbd14b-bfad-4b28-90a9-3019bf72336f',\n",
+       " '00a824c0-e060-495f-9ebc-79c82fef4c67',\n",
+       " '5810514e-2a86-4a34-b7bd-1e4b0b601295',\n",
+       " '1841cf1f-725d-499e-ab8e-7f6fc8c308b6',\n",
+       " 'b98f6b89-3de4-4295-be1c-59e465de1e32',\n",
+       " '3017e4dc-2150-43ad-9b08-b95b48ba8dfa',\n",
+       " '41ea689a-7e05-463b-915a-90e63b8c0572',\n",
+       " '1df6ebb3-9d16-4c0f-96cc-e1b1596d2006',\n",
+       " '818d2996-766a-4fd9-82b8-7e4cb080af0e',\n",
+       " '1a166c4f-4c53-422e-8473-b3cff85e6750',\n",
+       " '9373cd09-a591-42be-9343-ed6f06b7056d',\n",
+       " '03c42ea1-1e04-4a3e-9b04-46d8568dcd02',\n",
+       " 'bef552f5-efd8-4e98-8467-d54ac7c4ef41',\n",
+       " '6638cfb3-3831-4fc2-9327-194b76cf22e1',\n",
+       " '31d8dfb1-71fd-4c53-9229-7cd48bee07e4',\n",
+       " '7d999a68-0215-4e45-8e6c-879c6ca2b771',\n",
+       " 'f4f45cff-c45c-413a-92ea-b6533e3e0019',\n",
+       " '68f06c5f-8566-4a4f-a4b1-ab8398724913',\n",
+       " 'ee320f72-b613-4acd-b10d-3ceef332a949',\n",
+       " '5d9a5895-0f28-416c-a6d6-3e781658ea57',\n",
+       " '58b271d5-f728-4de8-b2ae-51908931247c',\n",
+       " '57c5856a-c7bd-4d0f-87c6-37005b1484aa',\n",
+       " '176b4fe3-f570-4d9f-9e25-a5d218f75c8b',\n",
+       " '4037a618-e6ba-4142-a6d2-3e32ef25fd1b',\n",
+       " '68c98fb2-402b-4670-9b3b-0c77619998ea',\n",
+       " '96fe2729-b5a2-4e77-92bb-9df410144768',\n",
+       " '9bd71ac6-c455-41f3-8c56-59987a649ac4',\n",
+       " 'fe380793-8035-414e-b000-09bfe5ece92a',\n",
+       " '64d04585-67e7-4320-baad-8d4589fd18f7',\n",
+       " 'f211d54e-e7eb-4188-bdcd-faa9c4317e9e']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.load('C:\\proj\\int-brain-lab\\website\\TrialViewer\\pipelines\\selectable.pids', allow_pickle=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d6032be8-438e-407a-a7a0-34aac1720d7d",
    "metadata": {},
